--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_despidos.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_despidos.jrxml
@@ -39,7 +39,7 @@
 	<title>
 		<band height="138">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="487" y="96" width="70" height="20" uuid="dda4378c-4329-4e1b-a6d1-425a5837cddc"/>
+				<reportElement x="485" y="76" width="70" height="20" uuid="dda4378c-4329-4e1b-a6d1-425a5837cddc"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -60,28 +60,28 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="456" y="76" width="74" height="20" uuid="3e648985-c6aa-4373-b967-1e2d2d9c1b91"/>
+				<reportElement x="465" y="96" width="74" height="20" uuid="3e648985-c6aa-4373-b967-1e2d2d9c1b91"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="143" y="40" width="265" height="20" uuid="f1353065-9401-447a-908f-e7e6c2021c35"/>
+				<reportElement x="130" y="96" width="265" height="20" uuid="f1353065-9401-447a-908f-e7e6c2021c35"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
 				<text><![CDATA[REPORTE DE DESPIDOS]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="530" y="76" width="26" height="20" uuid="8ea124ca-2de6-4cb6-b560-a8abe4d1713c"/>
+				<reportElement x="539" y="96" width="26" height="20" uuid="8ea124ca-2de6-4cb6-b560-a8abe4d1713c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="400" y="96" width="114" height="20" uuid="29cf3f46-1b2c-4677-bfff-7d741debe291"/>
+				<reportElement x="408" y="76" width="114" height="20" uuid="29cf3f46-1b2c-4677-bfff-7d741debe291"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -92,7 +92,7 @@
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="303" y="96" width="100" height="20" uuid="9910ef37-18ed-4563-8745-7bff4dab8d72"/>
+				<reportElement x="308" y="114" width="100" height="20" uuid="9910ef37-18ed-4563-8745-7bff4dab8d72"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -106,28 +106,28 @@
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="125" y="96" width="39" height="20" uuid="156fd6bd-47d4-4305-8821-ef089f013f18"/>
+				<reportElement x="130" y="114" width="39" height="20" uuid="156fd6bd-47d4-4305-8821-ef089f013f18"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="14" y="96" width="39" height="20" uuid="7afe2c9b-0ab2-4b79-8519-c90452d6e7a4"/>
+				<reportElement x="0" y="94" width="84" height="20" uuid="7afe2c9b-0ab2-4b79-8519-c90452d6e7a4"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[rpt_desp]]></text>
+				<text><![CDATA[pnt_reporte_desp]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="164" y="96" width="100" height="20" uuid="f6e780a8-3d6c-4956-8e97-3568d49240e5"/>
+				<reportElement x="169" y="114" width="100" height="20" uuid="f6e780a8-3d6c-4956-8e97-3568d49240e5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="264" y="96" width="39" height="20" uuid="0e51812c-0f20-4c6b-b1f8-4e3650c4399e"/>
+				<reportElement x="269" y="114" width="39" height="20" uuid="0e51812c-0f20-4c6b-b1f8-4e3650c4399e"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -144,6 +144,13 @@
 				<reportElement x="416" y="6" width="123" height="48" uuid="f7ce138a-1f2c-4a6e-8144-aef692f79039"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
+			<staticText>
+				<reportElement x="143" y="40" width="265" height="20" uuid="0776d3b8-5ad0-4af2-96eb-eb9f9fc2f806"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" isBold="true"/>
+				</textElement>
+				<text><![CDATA[SISADMRH]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
@@ -157,52 +164,70 @@
 			<staticText>
 				<reportElement mode="Transparent" x="0" y="0" width="65" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="5b41b3a5-ca68-416b-b74a-121d62730661"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="65" y="0" width="63" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="6811f3ea-f920-4c41-a968-bc45cc985a03"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Apellido]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="143" y="0" width="64" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="8f49158b-50fa-492d-bf23-1e92033042cb"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="218" y="0" width="75" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="35a434c8-0888-4184-98d7-7f4514e38d9c"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Plaza]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="306" y="0" width="76" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="019c7d17-34ab-471a-b7cb-9cc60d71fe7f"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Numero Partida]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="382" y="0" width="92" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="9c07557b-6a5e-4d3b-a8c2-cdac24d22a1b"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Numero Subpartida]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="474" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="9d8701df-d188-470d-b6a4-01fafbe56e84"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Sueldo Base]]></text>
 			</staticText>
+			<line direction="BottomUp">
+				<reportElement x="65" y="1" width="1" height="27" uuid="f09ec1f7-2bbc-4946-a2af-f0b2c81dec0f"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="142" y="0" width="1" height="27" uuid="9827196f-a6fa-4ac3-99af-85ccdf59286e"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="218" y="1" width="1" height="27" uuid="dc5257e0-f899-4ee0-9df9-3df3528d0fcd"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="305" y="0" width="1" height="27" uuid="8c5f2dc3-2ae7-47bf-908e-378cdb49fcba"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="381" y="0" width="1" height="27" uuid="5eef7864-e3c0-4550-a7d8-adb573bca1bf"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="474" y="1" width="1" height="27" uuid="cf41dc5c-7ab6-4452-83cd-b846950dd077"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
@@ -210,49 +235,49 @@
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="0" width="65" height="20" uuid="32612523-bc28-45e2-af8f-dd46fab43c3f"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="65" y="0" width="63" height="20" uuid="33375127-0338-4c5b-9509-f14986a28d49"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{apellidoempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="155" y="0" width="52" height="20" uuid="3989f955-de11-4b0d-927f-07a5b5998594"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ubicacionpuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="236" y="0" width="57" height="20" uuid="76e886ce-11c5-4077-b852-9ebdf9a65c42"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="318" y="0" width="64" height="20" uuid="51207c76-8778-4714-ba47-9255f7c84927"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numeropartidapuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="408" y="0" width="66" height="20" uuid="3d2ce0cc-14a6-4c60-ad69-fc726c15e2ab"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numerosubpartidapuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="495" y="0" width="58" height="20" uuid="426efd50-e02a-42ee-97b4-7211d5725570"/>
 				<textElement>
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sueldobase}]]></textFieldExpression>
 			</textField>
