--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_indemnizado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_indemnizado.jrxml
@@ -40,7 +40,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 	<title>
 		<band height="141">
 			<textField>
-				<reportElement x="702" y="79" width="74" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
+				<reportElement x="702" y="99" width="74" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -54,14 +54,14 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="646" y="99" width="114" height="20" uuid="6d432196-300e-4646-9cbb-b80875b4eefe"/>
+				<reportElement x="649" y="79" width="114" height="20" uuid="6d432196-300e-4646-9cbb-b80875b4eefe"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="733" y="99" width="70" height="20" uuid="63655c39-f73f-4fee-a684-d8166c4e20f4"/>
+				<reportElement x="736" y="79" width="70" height="20" uuid="63655c39-f73f-4fee-a684-d8166c4e20f4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -79,24 +79,24 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[REPORTE DE PERSONAL INDEMNIZADO]]></text>
+				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="776" y="79" width="26" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
+				<reportElement x="776" y="99" width="26" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="410" y="83" width="39" height="20" uuid="42505c10-f786-4a25-b532-b443116b5587"/>
+				<reportElement x="402" y="119" width="39" height="20" uuid="42505c10-f786-4a25-b532-b443116b5587"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="310" y="83" width="100" height="20" uuid="13c79a80-9774-48ca-9657-532654babed1"/>
+				<reportElement x="302" y="119" width="100" height="20" uuid="13c79a80-9774-48ca-9657-532654babed1"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -110,18 +110,18 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="22" y="83" width="39" height="20" uuid="5aae6816-2926-4cd4-a67a-1ce357657672"/>
+				<reportElement x="0" y="79" width="92" height="20" uuid="5aae6816-2926-4cd4-a67a-1ce357657672"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[rpt_pind]]></text>
+				<text><![CDATA[pnt_reporte_pind]]></text>
 			</staticText>
 			<image>
 				<reportElement x="665" y="12" width="123" height="48" uuid="7ec0bde2-48ee-4feb-8a40-7b5c5663ef50"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="271" y="83" width="39" height="20" uuid="1bae3f37-ce3f-4beb-883a-cad4449a8025"/>
+				<reportElement x="263" y="119" width="39" height="20" uuid="1bae3f37-ce3f-4beb-883a-cad4449a8025"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -135,7 +135,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="449" y="83" width="100" height="20" uuid="6a2aee93-1e60-4613-b8a2-ed59852df387"/>
+				<reportElement x="441" y="119" width="100" height="20" uuid="6a2aee93-1e60-4613-b8a2-ed59852df387"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -145,6 +145,13 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 				<reportElement x="10" y="12" width="144" height="48" uuid="5335f588-f72a-4ac4-807c-e398e39971ec"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
+			<staticText>
+				<reportElement x="263" y="99" width="265" height="20" uuid="228f6840-8065-48dd-965c-4921f25a3198"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" isBold="true"/>
+				</textElement>
+				<text><![CDATA[REPORTE DE PERSONAL INDEMNIZADO]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
@@ -211,6 +218,27 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 				</textElement>
 				<text><![CDATA[Nombre del Puesto]]></text>
 			</staticText>
+			<line direction="BottomUp">
+				<reportElement x="68" y="0" width="1" height="27" uuid="9b1591b7-d015-4995-9b1a-d229473903ef"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="142" y="0" width="1" height="27" uuid="3185b70e-2453-4da8-9b79-d43ebb4654f5"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="237" y="1" width="1" height="27" uuid="0b301e39-1bb6-4672-8ef0-7771b5e7460b"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="302" y="1" width="1" height="27" uuid="f808638e-aaf4-4a85-946c-ce0019571be9"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="387" y="1" width="1" height="27" uuid="333017c5-1710-4930-86ba-3a831c5a357f"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="464" y="0" width="1" height="27" uuid="624d4083-a13b-4265-ab2d-9264295dc924"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="628" y="0" width="1" height="27" uuid="c24ac293-f47a-46c9-94cf-9e1d59542a86"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
