--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_personalcapacitado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_personalcapacitado.jrxml
@@ -36,7 +36,7 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="403" y="112" width="114" height="20" uuid="908348f9-35c7-41c1-89f4-1481f51ad07c"/>
+				<reportElement x="403" y="92" width="114" height="20" uuid="908348f9-35c7-41c1-89f4-1481f51ad07c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -47,17 +47,17 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[ESTADISTICO DE PERSONAL ACTIVO]]></text>
+				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="490" y="112" width="70" height="20" uuid="57f3ba13-189f-4cd8-9af9-2876c75cbc54"/>
+				<reportElement x="490" y="92" width="70" height="20" uuid="57f3ba13-189f-4cd8-9af9-2876c75cbc54"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="533" y="87" width="26" height="20" uuid="52a58595-ce34-4b5a-8e1c-db32c0ca9f8a"/>
+				<reportElement x="533" y="112" width="26" height="20" uuid="52a58595-ce34-4b5a-8e1c-db32c0ca9f8a"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -71,7 +71,7 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="459" y="87" width="74" height="20" uuid="85c98463-00e7-493a-ae76-32172a303899"/>
+				<reportElement x="459" y="112" width="74" height="20" uuid="85c98463-00e7-493a-ae76-32172a303899"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -85,25 +85,25 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="177" y="87" width="100" height="20" uuid="878e71fc-d2b5-4326-8dc4-6a5ec33dadf7"/>
+				<reportElement x="183" y="132" width="100" height="20" uuid="878e71fc-d2b5-4326-8dc4-6a5ec33dadf7"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="316" y="87" width="100" height="20" uuid="8a249beb-9ed9-44f1-a79b-13ce3f1043cc"/>
+				<reportElement x="322" y="132" width="100" height="20" uuid="8a249beb-9ed9-44f1-a79b-13ce3f1043cc"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="5" y="87" width="39" height="20" uuid="2596b3c8-3c03-49d3-b059-5c0c4fe4e86d"/>
+				<reportElement x="5" y="87" width="86" height="20" uuid="2596b3c8-3c03-49d3-b059-5c0c4fe4e86d"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[rpt_pcap]]></text>
+				<text><![CDATA[pnt_reporte_etpa]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="444" y="132" width="100" height="20" uuid="fa3c18a8-0ca0-47c8-8da5-ddf9aca73969"/>
@@ -113,7 +113,7 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="138" y="87" width="39" height="20" uuid="3c67bbc6-018a-44d9-b50e-9546e39db605"/>
+				<reportElement x="144" y="132" width="39" height="20" uuid="3c67bbc6-018a-44d9-b50e-9546e39db605"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -128,11 +128,18 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="277" y="87" width="39" height="20" uuid="5255ba6e-bf90-493a-be00-ec2903224c82"/>
+				<reportElement x="283" y="132" width="39" height="20" uuid="5255ba6e-bf90-493a-be00-ec2903224c82"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="144" y="112" width="265" height="20" uuid="7b7a2dcf-48bb-4bab-bcdf-86dcad0d8af2"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ESTADISTICO DE PERSONAL ACTIVO]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -147,38 +154,50 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 			<staticText>
 				<reportElement mode="Transparent" x="0" y="0" width="111" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="3d993ab9-6305-4bb9-a23f-a339eca014b6"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[No. Empleados]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="111" y="0" width="111" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="c70aa98a-8d06-4728-8331-69e9c9215c1c"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="222" y="0" width="111" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="a64f9fa6-75a0-49bf-876f-205791d9ffb8"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[No. Capacitaciones]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="333" y="0" width="111" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="631eee16-ae86-4372-be95-6f1826e60a72"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tema de Capacitacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="444" y="0" width="111" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="0e0e635e-29b8-45a7-8e7a-2dd44f54a5c1"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Capacitacion]]></text>
 			</staticText>
+			<line direction="BottomUp">
+				<reportElement x="110" y="0" width="1" height="27" uuid="6ba800d0-e107-42ca-bbd2-d9fee909cf1e"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="221" y="0" width="1" height="27" uuid="8824cbb0-e9f9-4eb1-8332-7592f470a990"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="333" y="0" width="1" height="27" uuid="25e718ef-2b72-446e-b991-636fdcd517b8"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="443" y="0" width="1" height="27" uuid="c6d6ca1b-1721-4a54-b280-156d2eeae666"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
@@ -186,35 +205,35 @@ WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="0" width="111" height="20" uuid="4a7557b2-98ec-47de-8ffc-82afd7e294fa"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Noempleados}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="111" y="0" width="111" height="20" uuid="849185a6-9f84-4bdb-b5e1-bd9cfc01ce62"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Ubicacion}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="222" y="0" width="111" height="20" uuid="155ce77b-4472-4774-8608-3c42469f4b0a"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NoCapacitaciones}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="333" y="0" width="111" height="20" uuid="d678290c-85d3-4bdc-b2a3-f88dc22e1e65"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrecapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="444" y="0" width="111" height="20" uuid="2866d9e5-b794-4e36-a253-3404ef6b07a7"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{FechaCapacitacion}]]></textFieldExpression>
 			</textField>
