--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_plazasocupadas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_plazasocupadas.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8b26e61c-8f32-4c26-ad7d-40da0b6d3e65">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="5"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -46,7 +46,7 @@
 	<title>
 		<band height="152" splitType="Stretch">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="724" y="101" width="70" height="20" uuid="75d074f0-9813-4ac8-bcf9-824568c03a88"/>
+				<reportElement x="739" y="81" width="70" height="20" uuid="75d074f0-9813-4ac8-bcf9-824568c03a88"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -60,14 +60,14 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="637" y="101" width="114" height="20" uuid="576379c8-0b07-4601-a754-aed983dec059"/>
+				<reportElement x="652" y="81" width="114" height="20" uuid="576379c8-0b07-4601-a754-aed983dec059"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="693" y="81" width="74" height="20" uuid="c280f540-adf5-4fff-8a53-efa283b7e71f"/>
+				<reportElement x="692" y="101" width="74" height="20" uuid="c280f540-adf5-4fff-8a53-efa283b7e71f"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -85,17 +85,17 @@
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[REPORTE DE PLAZAS OCUPADAS]]></text>
+				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="767" y="81" width="26" height="20" uuid="50139365-5d13-4c7f-b2db-5effd408f473"/>
+				<reportElement x="766" y="101" width="26" height="20" uuid="50139365-5d13-4c7f-b2db-5effd408f473"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="275" y="81" width="39" height="20" uuid="86b24d44-7446-4e1b-a492-bffc3bd73f2a"/>
+				<reportElement x="275" y="121" width="39" height="20" uuid="86b24d44-7446-4e1b-a492-bffc3bd73f2a"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -110,7 +110,7 @@
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="453" y="81" width="100" height="20" uuid="0963a750-f532-4727-8a26-8bc4b87d11f2"/>
+				<reportElement x="453" y="121" width="100" height="20" uuid="0963a750-f532-4727-8a26-8bc4b87d11f2"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -124,14 +124,14 @@
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="314" y="81" width="100" height="20" uuid="a31de850-6a98-43e2-8705-ae739c373413"/>
+				<reportElement x="314" y="121" width="100" height="20" uuid="a31de850-6a98-43e2-8705-ae739c373413"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="414" y="81" width="39" height="20" uuid="2888ae5e-da75-47b3-9d55-e0121e44f235"/>
+				<reportElement x="414" y="121" width="39" height="20" uuid="2888ae5e-da75-47b3-9d55-e0121e44f235"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -145,11 +145,18 @@
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="11" y="83" width="39" height="20" uuid="29d16f7f-39c7-4f24-98ad-36fdd63c988c"/>
+				<reportElement x="11" y="83" width="149" height="20" uuid="29d16f7f-39c7-4f24-98ad-36fdd63c988c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[rpt_plao]]></text>
+				<text><![CDATA[pnt_reporte_poc]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="138" y="101" width="494" height="20" uuid="df4a62b5-b603-4e2f-bc1e-3c427bb0912c"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" isBold="true"/>
+				</textElement>
+				<text><![CDATA[REPORTE DE PLAZAS OCUPADAS]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -164,73 +171,100 @@
 			<staticText>
 				<reportElement style="Column header" x="0" y="0" width="79" height="18" forecolor="#000000" uuid="135e995f-0313-47f8-b1a1-b7f8fc9c5c87"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[codigo Puesto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="79" y="0" width="79" height="18" forecolor="#000000" uuid="f42acce1-d8ab-457c-9b43-293a0e1bb627"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Puesto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="158" y="0" width="79" height="18" forecolor="#000000" uuid="0fff6c45-23db-425b-ba35-69035b20ea10"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="237" y="0" width="63" height="18" forecolor="#000000" uuid="2980c550-1d5c-4dde-a235-db292f31f69f"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Apellido]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="316" y="0" width="79" height="18" forecolor="#000000" uuid="3dccecb8-9ed3-4f76-b7dd-e4611fd3ec8f"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Sexo]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="395" y="0" width="79" height="18" forecolor="#000000" uuid="d696b63c-c4cc-4e3c-a6a3-62730c1ee9f0"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[sueldo Basico]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="474" y="0" width="79" height="18" forecolor="#000000" uuid="2c92bff4-556c-4fc9-b90b-305c3deff435"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Nombramiento]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="553" y="0" width="79" height="18" forecolor="#000000" uuid="9356d26f-063d-419f-b867-bc993e916e13"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Desvinculacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="632" y="0" width="79" height="18" forecolor="#000000" uuid="bcbd7a45-e6be-4092-b0d7-befb19b93c8a"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="711" y="0" width="79" height="18" forecolor="#000000" uuid="4115a89b-2946-48e8-9b8e-349d6da22399"/>
 				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Linea de Trabajo]]></text>
 			</staticText>
+			<line direction="BottomUp">
+				<reportElement x="78" y="0" width="1" height="27" uuid="6531b655-842a-4df6-a03a-3332f5ceac32"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="160" y="1" width="1" height="27" uuid="139c37c3-aeec-4d84-a1e6-58f0bbce5f30"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="236" y="0" width="1" height="27" uuid="8140cc14-f90d-4977-9567-4645ae041744"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="313" y="0" width="1" height="27" uuid="a0d1b16d-d0c4-49f6-80b2-d9173b296530"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="395" y="1" width="1" height="27" uuid="2764e093-c7cf-4a3e-8669-f372c48e1b5d"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="473" y="1" width="1" height="27" uuid="0d43c8d8-9964-4f3e-8bbd-4f245205f185"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="555" y="0" width="1" height="27" uuid="a7834ab6-379f-4f23-a60a-75df8444a960"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="631" y="1" width="1" height="27" uuid="085f1a91-4e85-4da4-bf8e-6272b9bbbbfd"/>
+			</line>
+			<line direction="BottomUp">
+				<reportElement x="711" y="1" width="1" height="27" uuid="90b6b445-cca0-42b0-accb-2331f00c2552"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
@@ -240,70 +274,70 @@
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="17" y="0" width="48" height="18" uuid="3c5758da-3c0c-4b36-b023-ae0839130913"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{codigo Puesto}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="79" y="0" width="79" height="18" uuid="49e9ed25-1488-4f99-a77d-bc19c7eabc44"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{Nombre Puesto}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="158" y="0" width="79" height="18" uuid="050e279f-d9c1-4538-a029-7fc70405f8d4"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="237" y="0" width="79" height="18" uuid="fdd5851d-fb6e-4494-bcb3-e0760bc3ade2"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{apellidoempleado}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="316" y="0" width="79" height="18" uuid="7d4ad7b1-028e-4b59-a612-9bb8c46434ac"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{Sexo}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="395" y="0" width="79" height="18" uuid="420b4dd9-e69f-4891-a9b9-a5704ef9933d"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{sueldo Basico}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="474" y="0" width="79" height="18" uuid="b150b28f-7b6e-4d24-adfd-132a756eb7f0"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{Fecha de Nombramiento}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="553" y="0" width="79" height="18" uuid="baed8f64-5a56-4b30-9faa-82e21ecb2d78"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{Fecha de Desvinculacion}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="632" y="0" width="79" height="18" uuid="21834cc1-010c-41cd-a765-56861c9513e3"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{Ubicacion}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="711" y="0" width="79" height="18" uuid="6d28aa45-3cce-488f-97e5-11eb16a37ce9"/>
 					<textElement textAlignment="Center">
-						<font size="10"/>
+						<font size="9"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{Linea de Trabajo}]]></textFieldExpression>
 				</textField>
